--- a/tablero.Rmd
+++ b/tablero.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Carrera La Luz 2022"
+title: "Dashboard Carrera La Luz 2022"
 subtile: "Actividad 1 - Métodos y Simulación Estadística"
 output: 
   flexdashboard::flex_dashboard:
     theme:
-      bg: "#FFFFFF"
-      fg: "#2A735C" 
-      primary: "#5aa0ad" 
+      bg: "#dcf1f2"
+      fg: "#052729" 
+      primary: "#17545e" 
       base_font:
         google: Sen
       code_font:
@@ -21,6 +21,7 @@ library(flexdashboard)
 # thematic::thematic_rmd()
 library(ggplot2)
 library(paqueteMET)
+library(dplyr)
 
 data("CarreraLuz22")
 
@@ -38,175 +39,182 @@ Theme2 = theme(
 )# tamaño letra por grupos
 
 # subsets-----------------------------------------------------------------------
-CarreraLuz22$sex[CarreraLuz22$sex == "M"]="Hombre"
-CarreraLuz22$sex[CarreraLuz22$sex == "F"]="Mujer"
+#CarreraLuz22$sex[CarreraLuz22$sex == "M"]="Hombre"
+#CarreraLuz22$sex[CarreraLuz22$sex == "F"]="Mujer"
 
 #-------------------------------------------------------------------------------
 CarreraLuz22M = subset(CarreraLuz22, CarreraLuz22$sex=="Hombre")
 CarreraLuz22F = subset(CarreraLuz22, CarreraLuz22$sex=="Mujer")
 
 #-------------------------------------------------------------------------------
-CarreraLuz22_c1M = subset(CarreraLuz22M, CarreraLuz22M$categoria=="1. Juvenil")
-CarreraLuz22_c2M = subset(CarreraLuz22M, CarreraLuz22M$categoria=="2. Abierta")
-CarreraLuz22_c3M = subset(CarreraLuz22M, CarreraLuz22M$categoria=="3. Veteranos A")
-CarreraLuz22_c4M = subset(CarreraLuz22M, CarreraLuz22M$categoria=="4. Veteranos B")
-CarreraLuz22_c5M = subset(CarreraLuz22M, CarreraLuz22M$categoria=="5. Veteranos C")
+categorias= data.frame(table(CarreraLuz22$categoria))
+colnames(categorias)=c("categoria", "conteo")
 
+categorias <- categorias %>% 
+  mutate(perc = `conteo` / sum(`conteo`)) %>% 
+  arrange(perc) %>%
+  mutate(labels = scales::percent(perc))
 
-CarreraLuz22_c1F = subset(CarreraLuz22F, CarreraLuz22F$categoria=="1. Juvenil")
-CarreraLuz22_c2F = subset(CarreraLuz22F, CarreraLuz22F$categoria=="2. Abierta")
-CarreraLuz22_c3F = subset(CarreraLuz22F, CarreraLuz22F$categoria=="3. Veteranos A")
-CarreraLuz22_c4F = subset(CarreraLuz22F, CarreraLuz22F$categoria=="4. Veteranos B")
-CarreraLuz22_c5F = subset(CarreraLuz22F, CarreraLuz22F$categoria=="5. Veteranos C")
 #-------------------------------------------------------------------------------
 
-categoria= c("Juvenil","Abierta","Veteranos A", "Veteranos B","Veteranos C")
-t2 = aggregate(CarreraLuz22$timerun/60, by=list(CarreraLuz22$categoria,CarreraLuz22$sex), FUN= summary)
-t2=t2$x
-t2m=t2[1:5,] 
-row.names(t2m)=categoria
-t2h=t2[6:10,] 
-row.names(t2h)=categoria
-```
+promedio_ciudades = aggregate(CarreraLuz22$timerun/60,by=list(CarreraLuz22$categoria), FUN=mean)
+colnames(promedio_ciudades)=c("categoria", "media")
 
-Column {data-width=700 .tabset}
------------------------------------------------------------------------
-
-### Tiempos de carrera
-
-```{r}
-paleta6=c("#447270", "#6B9493", "#F6E271", "#F6B916", "#F69312", "#BC6C25")
-p1=ggplot(CarreraLuz22F, aes(y=timerun/60, x=categoria))+
-  geom_jitter(color="#034A94", size=1, alpha=0.9) +
-  aes(color=paleta6)+
-  labs(title = " ",
-       y= "tiempo - min",
-       x= "categorías")+ 
-  #facet_wrap(~ sex)
-  #facet_grid(vars(sex), scale="free")+
-  ylim(0,170)+
-  Theme2
-
-p1
+A = subset(CarreraLuz22$timerun/60, CarreraLuz22$sex=="Hombre")
+B = subset(CarreraLuz22$timerun/60, CarreraLuz22$sex=="Mujer")
 
 ```
 
-### Hombre por categorías
 
-```{r, fig.height=3}
-ggplot(CarreraLuz22M, aes(x = categoria, y = timerun/60 )) +
-  geom_boxplot(aes(fill = categoria)) + 
-  # facet_wrap(~sex, ncol=1, labeller = labeller(dose = etiquetas))+
-  labs(title = "", y= "tiempo - min", x= "categorías")+
-  scale_fill_brewer() +
-  #scale_fill_manual(values = c("#00070D", "#012447", "#034A94", "#0570E1", "#3998FB","#37B6FC"))+
-  theme(legend.position = "none")
-t2h
-```
-
-### Mujeres por categoría
-```{r, fig.height=3}
-ggplot(CarreraLuz22F, aes(x = categoria, y = timerun/60 )) +
-  geom_boxplot(aes(fill = categoria)) + 
-  # facet_wrap(~sex, ncol=1, labeller = labeller(dose = etiquetas))+
-  labs(title = "", y= "tiempo - min", x= "categorías")+
-  scale_fill_brewer() +
-  #scale_fill_manual(values = c("#00070D", "#012447", "#034A94", "#0570E1", "#3998FB","#37B6FC"))+
-  theme(legend.position = "none")
-t2m
-```
-
-### Más información
-
-```{r, echo=FALSE, out.width="30%", fig.align = "center"}
-knitr::include_graphics("carrera1.png")
-```
-
-**10.07 K** Participantes desde los 15 años en adelante.
-
-**Salida**: Hotel Intercontinental, calle 5, Carrera 6, carrera 4c, carrera1, carrera 4, calle de la escopeta, museo arqueológico la merced, bulevar del rio, puente Ortiz, av 2N, parque lineal rio Cali av2n, calle 25, parque lineal av1n, calle 13, carrera 1 calle 12, carrera 5, calle 10, gobernación del valle, edificio Aristi carrera 9, calle 9 plazoleta de san francisco, bulevar del rio, calle 8, carrera 4, carrera 3ª, parque del peñón, carrera 3, carrera 3ª oeste, calle 5 oeste, carrera 4, av Belalcázar, carrera 2ª oeste, librería nacional, carrera 1c, museo la tertulia, av Colombia, pepe ganga, carrera 3, carrera 2, carrera 3ª, av Colombia, carrera 4, meta hotel intercontinental. [juanchocorrelon.com](https://juanchocorrelon.com/intercontinental-10k-luz-2022/#10k)
-
-Column {data-width=400}
------------------------------------------------------------------------
-
-### Tiempo mujeres categoría Abierta
-
-```{r}
-# seleccion de bases
-dataFc2=subset(CarreraLuz22, (CarreraLuz22$sex=="Mujer" & CarreraLuz22$categoria=="2. Abierta")) # dataset de mujeres
-x=dataFc2$timerun/60
-hist(x, xlim=c(30,120), ylim=c(0,80),las=1,
-main = " ",
-xlab="tiempo (min)",
-ylab = "frecuencia",
-col ="#ee964b")
-```
-
-### Tiempo hombres categoría Abierta
-
-```{r}
-# seleccion de bases
-dataMc2=subset(CarreraLuz22, (CarreraLuz22$sex=="Hombre" & CarreraLuz22$categoria=="2. Abierta")) # dataset de mujeres
-x=dataMc2$timerun/60
-hist(x, xlim=c(30,120), ylim=c(0,250),las=1,
-main = " ",
-xlab="tiempo (min)",
-ylab = "frecuencia",
-col ="#ee964b")
-```
 
 Column { data-width=50 }
 -----------------------------------------------------------------------
 ### minimo  {.value-box}
 ```{r}
 valueBox(value =paste(round(min(CarreraLuz22$timerun/60),1), "min"), 
-         caption = "Tiempo ganador", 
-         icon = "fa-thumbs-up", 
-         color = "#0EB0C6")
+         caption = "Tiempo mas Corto", 
+         icon = "fa-solid fa-check", 
+         color = "#61c990")
 ```
 
-
-### velocidad  {.value-box}
+### maximo  {.value-box}
 ```{r}
-valueBox(value =paste(round(10070/min(CarreraLuz22$timerun),2),"m/s"), # ud1$cierre, 
-         caption = "Máxima velocidad", 
-         icon = "fa-clock", 
-         color = "#0EB0C6")
+valueBox(value =paste(round(max(CarreraLuz22$timerun/60),1), "min"), 
+         caption = "Tiempo mas Largo", 
+         icon = "fa-solid fa-xmark", 
+         color = "#61c990")
 ```
 
-
-### distancia  {.value-box}
+### hombres  {.value-box}
 ```{r}
-valueBox(value = paste(10.07,"Km"), #ud1$min, 
-         caption = "Distancia recorrida", 
-         icon = "fa-solod fa-person-walking-arrow-right", 
-         color = "#0EB0C6")
-```
-
-
-### volumen  {.value-box}
-```{r}
-valueBox(value = paste(length(CarreraLuz22$timerun),"atletas"), 
-         caption = "Número de participantes", 
+valueBox(value = paste(length(subset(CarreraLuz22$timerun, CarreraLuz22$sex=="Hombre")),"Hombres"), 
+         caption = "Número de Hombres", 
          icon = "fa-people", 
-         color = "#0EB0C6")
+         color = "#5475b3")
+
+
 ```
 
 
-### porcentaje  {.value-box}
+### mujeres  {.value-box}
 ```{r}
-valueBox(value = paste(round(length(CarreraLuz22F$timerun)/length(CarreraLuz22$timerun)*100,2),"%"), 
-         caption = "Porcentaje mujeres", 
-         icon = "  ", 
-         color = "#0EB0C6")
+valueBox(value = paste(length(subset(CarreraLuz22$timerun, CarreraLuz22$sex=="Mujer")),"Mujeres"), 
+         caption = "Número de Mujeres", 
+         icon = "fa-people", 
+         color = "#9a54b3")
 ```
 
-### promedio  {.value-box}
+
+### promedioh  {.value-box}
 ```{r}
-valueBox(value = paste(round(mean(CarreraLuz22$timerun/60),2),"min"), 
-         caption = "Tiempo promedio de carrera", 
+valueBox(value = paste(round(mean(A),2),"min"), 
+         caption = "Tiempo promedio de carrera en hombres", 
          icon = "  ", 
-         color = "#0EB0C6")
+         color = "#5475b3")
 ```
+
+
+
+
+
+
+### promediom  {.value-box}
+```{r}
+valueBox(value = paste(round(mean(B),2),"min"), 
+         caption = "Tiempo promedio de carrera en mujeres", 
+         icon = "  ", 
+         color = "#9a54b3")
+```
+
+
+
+
+Column {data-width=400}
+-----------------------------------------------------------------------
+
+### Tiempo Promedio por Categoría
+
+```{r}
+# seleccion de bases
+
+ggplot(promedio_ciudades, aes(x = categoria, y = media, fill = categoria)) + 
+  geom_bar(stat = "identity")+
+  scale_fill_brewer()
+
+```
+
+### Tiempo Hombres y Mujeres por Categoría
+
+```{r}
+# seleccion de bases
+
+ggplot(CarreraLuz22, aes(x = categoria, y = timerun/60, colour = sex)) + 
+  geom_boxplot(outlier.shape = NA) +
+  geom_jitter()
+
+```
+
+
+
+Column {data-width=700 .tabset}
+-----------------------------------------------------------------------
+
+### Histograma de Hombres  y Mujeres
+
+```{r, echo=FALSE, out.width="30%", fig.align = "center"}
+
+ggplot(CarreraLuz22, aes(x = timerun/60, fill = sex, colour = sex)) + 
+  geom_histogram(alpha = 0.5, position = "identity") + 
+  labs(title = "", y= "Frecuencia", x= "Tiempos")+
+  theme(legend.position = "left")
+
+
+
+
+```
+
+### Participantes por Categoría
+```{r, fig.height=3}
+
+
+ggplot(categorias, aes(x = "", y = perc, fill = categoria)) +
+  geom_col() +
+  geom_label(aes(label = labels),
+             position = position_stack(vjust = 0.5),
+             show.legend = FALSE) +
+  guides(fill = guide_legend(title = "Categoria")) +
+  scale_fill_viridis_d() +
+  coord_polar(theta = "y")+
+  theme_void()
+
+
+
+
+
+```
+
+### Teimpos de Hombres y Mujeres
+
+```{r}
+ggplot(CarreraLuz22, aes(x = sex, y = timerun/60 )) +
+  geom_boxplot(aes(fill = sex)) + 
+  # facet_wrap(~sex, ncol=1, labeller = labeller(dose = etiquetas))+
+  labs(title = "", y= "tiempo - min", x= "sexo")+
+  scale_fill_brewer() +
+  #scale_fill_manual(values = c("#00070D", "#012447", "#034A94", "#0570E1", "#3998FB","#37B6FC"))+
+  theme(legend.position = "none")
+
+```
+
+### Relacion Edad-Tiempo
+
+```{r, fig.height=3}
+ggplot(CarreraLuz22, aes(x = edad, y = timerun/60, color = sex)) +
+  labs(title = "", y= "tiempo - min", x= "edad")+
+  geom_point()
+
+```
+
+
 
 
